# microservices-demo

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  CONTRIBUTING.md  GIT_SETUP.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  verify_grpc_imports.py
api-gateway/: Dockerfile  nginx.conf
docs/: DOCUMENTATION_UPDATE_SUMMARY.md  FEATURES.md  README.md
frontend/: .dockerignore  BACKEND_STATUS_SUMMARY.md  BLANK_PAGE_FIX.md  CRITICAL_FIXES_APPLIED.md  Dockerfile  Dockerfile.dev  HOW_TO_VERIFY_APP_WORKING.md  ORDER_FORM_BUG_FIX.md  index.html  nginx.conf  package.json  vite.config.js
order-service/: .dockerignore  Dockerfile  crypto_utils.py  debug_orders.py  decrypt_user_ids.py  generate_grpc.sh  pyproject.toml  requirements.txt  start_services.sh  test_order_flow.md  test_user_filter.py
order-service/order_service/: __init__.py  settings.py  urls.py
order-service/orders/: __init__.py  admin.py  factories.py  grpc_clients.py  models.py  serializers.py  urls.py  views.py
order-service/orders/grpc_generated/: __init__.py  product_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
order-service/orders/management/commands/: seed_data.py
order-service/orders/migrations/: 0001_initial.py  0002_alter_order_user_id.py
order-service/protos/: product.proto  user.proto
product-service/: .dockerignore  Dockerfile  generate_grpc.sh  grpc_server.py  pyproject.toml  requirements.txt  start_services.sh
scripts/: init-databases.sh
user-service/: .dockerignore  Dockerfile  debug_2fa.py  generate_grpc.sh  (+3 more)
(+76 files in other folders)
